WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28082
[V8] Do not register V8 error message listener in WorkerContextExecutionProxy
https://bugs.webkit.org/show_bug.cgi?id=28082
Summary
[V8] Do not register V8 error message listener in WorkerContextExecutionProxy
Jian Li
Reported
2009-08-07 13:22:09 PDT
Do not register V8 error message listener in WorkerContextExecutionProxy since now we handle and pass the error back to the worker if needed.
Attachments
Proposed Patch
(2.28 KB, patch)
2009-08-07 13:26 PDT
,
Jian Li
dglazkov
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jian Li
Comment 1
2009-08-07 13:26:00 PDT
Created
attachment 34317
[details]
Proposed Patch
Dimitri Glazkov (Google)
Comment 2
2009-08-07 13:27:20 PDT
Comment on
attachment 34317
[details]
Proposed Patch r=me.
Adam Barth
Comment 3
2009-08-07 15:36:55 PDT
Comment on
attachment 34317
[details]
Proposed Patch Clearing review flag on attachment: 34317 Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/bindings/v8/WorkerContextExecutionProxy.cpp Committed
r46919
M WebCore/ChangeLog M WebCore/bindings/v8/WorkerContextExecutionProxy.cpp
r46919
= 37cf8fd35fbac16e349f8636622901dc7c668732 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/46919
Adam Barth
Comment 4
2009-08-07 15:36:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug