2009-08-07  Jian Li  <jianli@chromium.org>

Reviewed by Dimitri Glazkov.

        [V8] Do not register V8 error message listener in WorkerContextExecutionProxy.
        https://bugs.webkit.org/show_bug.cgi?id=28082

        * bindings/v8/WorkerContextExecutionProxy.cpp:
        (WebCore::WorkerContextExecutionProxy::initV8IfNeeded):

Canonical link: https://commits.webkit.org/38522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46919 268f45cc-cd09-0410-ab3c-d52691b4dbfc